--- a/style.css
+++ b/style.css
@@ -52,8 +52,17 @@ form .display input{
 }
 @media only screen and (max-width:440px){
     .calc form input{
-        height: 30px;
-        width: 30px;
+        height: 50px;
+        width: 50px;
+        font-size: 10px;
+        margin: 5px;
+        border-radius:10px;
+    }
+}
+@media only screen and (max-width:340px){
+    .calc form input{
+        height: 35px;
+        width: 35px;
         font-size: 10px;
         margin: 5px;
         border-radius:10px;
@@ -61,8 +70,8 @@ form .display input{
 }
 @media only screen and (max-width:240px){
     .calc form input{
-        height: 15px;
-        width: 15px;
+        height: 24px;
+        width: 24px;
         font-size: 5px;
         margin: 2px;
         border-radius:5px;
